--- a/StreamlinkColab.ipynb
+++ b/StreamlinkColab.ipynb
@@ -23,11 +23,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tPuLCnbGFmxo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2fff9c3c-8e83-47db-b23d-fafb19f93a0b"
+        "id": "tPuLCnbGFmxo"
       },
       "source": [
         "#@markdown <br><center><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Google_Drive_logo.png/600px-Google_Drive_logo.png' height=\"50\" alt=\"Gdrive-logo\"/></center>\n",
@@ -46,15 +42,7 @@
         "  get_ipython().system_raw(\"rm -rf /root/.config/Google/DriveFS\")"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -69,10 +57,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "BdxczAg_rqzD",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0fe9c082-12be-4dcf-f453-6557a62aadd3",
         "collapsed": true
       },
       "source": [
@@ -81,46 +65,12 @@
         "!pip install streamlink"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: streamlink in /usr/local/lib/python3.10/dist-packages (6.7.4)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from streamlink) (2024.2.2)\n",
-            "Requirement already satisfied: isodate in /usr/local/lib/python3.10/dist-packages (from streamlink) (0.6.1)\n",
-            "Requirement already satisfied: lxml<6,>=4.6.4 in /usr/local/lib/python3.10/dist-packages (from streamlink) (4.9.4)\n",
-            "Requirement already satisfied: pycountry in /usr/local/lib/python3.10/dist-packages (from streamlink) (23.12.11)\n",
-            "Requirement already satisfied: pycryptodome<4,>=3.4.3 in /usr/local/lib/python3.10/dist-packages (from streamlink) (3.20.0)\n",
-            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.10/dist-packages (from streamlink) (1.7.1)\n",
-            "Requirement already satisfied: requests<3,>=2.26.0 in /usr/local/lib/python3.10/dist-packages (from streamlink) (2.31.0)\n",
-            "Requirement already satisfied: trio<1,>=0.22.0 in /usr/local/lib/python3.10/dist-packages (from streamlink) (0.25.1)\n",
-            "Requirement already satisfied: trio-websocket<1,>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from streamlink) (0.11.1)\n",
-            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.10/dist-packages (from streamlink) (4.11.0)\n",
-            "Requirement already satisfied: urllib3<3,>=1.26.0 in /usr/local/lib/python3.10/dist-packages (from streamlink) (2.0.7)\n",
-            "Requirement already satisfied: websocket-client<2,>=1.2.1 in /usr/local/lib/python3.10/dist-packages (from streamlink) (1.8.0)\n",
-            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from streamlink) (1.2.1)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.26.0->streamlink) (3.3.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.26.0->streamlink) (3.7)\n",
-            "Requirement already satisfied: attrs>=23.2.0 in /usr/local/lib/python3.10/dist-packages (from trio<1,>=0.22.0->streamlink) (23.2.0)\n",
-            "Requirement already satisfied: sortedcontainers in /usr/local/lib/python3.10/dist-packages (from trio<1,>=0.22.0->streamlink) (2.4.0)\n",
-            "Requirement already satisfied: outcome in /usr/local/lib/python3.10/dist-packages (from trio<1,>=0.22.0->streamlink) (1.3.0.post0)\n",
-            "Requirement already satisfied: sniffio>=1.3.0 in /usr/local/lib/python3.10/dist-packages (from trio<1,>=0.22.0->streamlink) (1.3.1)\n",
-            "Requirement already satisfied: wsproto>=0.14 in /usr/local/lib/python3.10/dist-packages (from trio-websocket<1,>=0.9.0->streamlink) (1.2.0)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from isodate->streamlink) (1.16.0)\n",
-            "Requirement already satisfied: h11<1,>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from wsproto>=0.14->trio-websocket<1,>=0.9.0->streamlink) (0.14.0)\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Fa5pg0fWctH",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1a8868d8-9b5b-4855-d8a2-2d2f47a498d1"
+        "id": "6Fa5pg0fWctH"
       },
       "source": [
         "#@markdown <center><h3><h2>Stream Recorder</h2>Record any stream</h3></center><br>\n",
@@ -140,12 +90,12 @@
         "\n",
         "#@markdown <br />5 - You can add custom plugins by add file to your COLAB '/content/tools/stream' folder\n",
         "#code to use plugin that was removed from streamlink, remove the comment bellow and set the .py name\n",
-        "#if not os.path.exists(f\"{RUN_Dir}/.py\"):\n",
-        "#  !cd {RUN_Dir} && wget https://raw.githubusercontent.com/limontec/streamlink/master/src/streamlink/plugins/.py\n",
+        "# if not os.path.exists(f\"{RUN_Dir}/tiktok.py\"):\n",
+        "#  !cd {RUN_Dir} && wget https://raw.githubusercontent.com/dongxiat/SteamlinkColab/main/tiktok.py\n",
         "\n",
         "#@markdown ---\n",
         "#@markdown ####Type stream url\n",
-        "streamURL =  \"https://www.tiktok.com/@chilly.hah/live\"  # @param {type:\"string\"}\n",
+        "streamURL =  \"https://www.youtube.com/watch?v=JVocS7Yftw8\"  # @param {type:\"string\"}\n",
         "#@markdown ---\n",
         "#@markdown ####user-agent:\n",
         "useragent = \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125.0.0.0 Safari/537.36 Edg/125.0.0.0\"  # @param {type:\"string\"}\n",
@@ -203,17 +153,7 @@
         "  clear_output()\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[cli][info] streamlink is running as root! Be careful!\n",
-            "error: No plugin can handle URL: https://www.tiktok.com/@chilly.hah/live\n",
-            "No file.\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
